# 9ferno

./: .gitignore  .gitmodules  IMPLEMENTATION-SUMMARY.md  QUICK-START.md  README-APPS.md  build-assemblers.sh  build_lua_vm.sh  minimal.dis  mkconfig  mkfile  run-app.sh  run.sh  shell.nix  syntax.sbl  wmlib-android.dis
.github/workflows/: appimage.yml
Android/arm64/include/: emu.h
android-port/: gradle.properties  settings.gradle  shell.nix
android-port/app/: build.gradle
android-port/app/src/main/: AndroidManifest.xml
android-port/app/src/main/cpp/: CMakeLists.txt  android_main.c  android_test.c  os.c
appl/acme/: acme.b  common.m  dat.m  frame.b  frame.m  text.b
appl/cmd/: build-all.sh  getauthinfo.b  hello.b  install-all.sh  lua.b  lua_example.b  mkfile  simpletk.b  wminit.b  zeros.b
appl/cmd/fs/: readfile.b
appl/cmd/kryon/: ast.b  ast.m  kryon.b  lexer.b  lexer.m  mkfile
appl/cmd/sh/: sh.b
appl/kryon/: button.kry  controls.kry  date.kry  hello.kry  reactive.kry  test.kry  test2.kry
appl/kryon/wm/: clock.kry
appl/lib/: mkfile  promptstring.b  syntax.b  syntax.m  wmclient.b  wmlib-android.b
appl/wm/: build-all.sh  hello.b  install-all.sh  mkfile  sh.b  testarray.b  testcallback.b  theme.b  toolbar.b  vt.b
emu/Android/: android_main.c  audio.h  devaudio.c  deveia.c  devfs.c  devwmctx.c  os.c  win.c  wm.c  wm.h
emu/Linux/: emu
emu/port/: devcons.c  devtheme.c  dis.c
icons/: taijios.bit
include/: kernel.h  tk.h
lib/ebook/: Tao-Te-Ching-J.H.-McDonald-1996.epub
lib/sh/: profile
lib/theme/: amiga.theme  classic.theme  contrast.theme  dark.theme  default.theme  dracula.theme  gbc.theme  haiku.theme  nord.theme  pink.theme  ubuntu.theme  win95.theme
lib/web/: index.html  kryon.html  publish.sh  style.css  taiji.html
lib/web/kryon/: index.html  style.css
lib/web/taiji/: index.html
libinterp/: dec.c  draw.c  link.c  load.c  readmod.c  runt.c  runt.c.backup  tk.c  xec.c
libtk/: colrs.c
limbo/: ecom.c
lua/: README
mkfiles/: mkfile-Linux-amd64  mkhost-DragonFly  mkhost-FreeBSD  mksyslib-rc  mksyslib-sh
module/: luavm.b  luavm.m  wmlib-android.m
os/init/: mkfile
tests/: lua_test.b
utils/mk/: Makefile
